* ci 배너 애니메이션 추가 * jspark -> main 코드 이동

--- a/scss/_jspark.scss
+++ b/scss/_jspark.scss
@@ -253,294 +253,294 @@
       }
     }
   }
-  &-07 {
-    .float-right {
-      width: 100%;
-    }
-    .card-wrap {
-      &.ci-banner {
-        margin-top: rem(8px);
-        // .card-item {
-        //   width: 20%;
-        // }
-      }
-    }
-    .info-intro-link {
-      margin: 11.5rem 0 9rem;
-    }
-  }
+  // &-07 {
+  //   .float-right {
+  //     width: 100%;
+  //   }
+  //   .card-wrap {
+  //     &.ci-banner {
+  //       margin-top: rem(8px);.kt
+  //       // .card-item {
+  //       //   width: 20%;
+  //       // }
+  //     }
+  //   }
+  //   .info-intro-link {
+  //     margin: 11.5rem 0 9rem;
+  //   }
+  // }
 }
 
-.card {
-  &-wrap {
-    display: flex;
-    align-items: center;
-    &.column {
-      flex-flow: column wrap;
-      align-items: stretch;
-      .card-item {
-        margin: 1.5rem 0 0 0;
-        &:first-child {
-          margin: 0;
-        }
-      }
-      .card-content {
-        flex-flow: row wrap;
-        align-items: flex-end;
-      }
-      .card-title {
-        margin-bottom: 0;
-        font-family: "NanumSquare";
-        font-size: 1.625rem;
-        line-height: 2.5rem;
-        color: #292929;
-      }
-      .card-txt {
-        margin: 1.875rem 0 0 0;
-        font-family: "NanumSquare";
-        font-size: 1.125rem;
-        line-height: 1.875rem;
-        color: #ababab;
-      }
-    }
-    &.business-card {
-      .card-item {
-        border-radius: 0;
-        box-shadow: none;
-      }
-      .card-content {
-        flex-flow: row nowrap;
-        align-items: center;
-        height: 9.3125rem;
-        padding: 0.7375rem 2.425rem 0.7375rem 2.425rem;
-      }
-      .card-ico {
-        background-position: 0 50%;
-        background-size: contain;
-        &.truefriend {
-          width: rem(310px);
-        }
-        &.koima {
-          width: rem(176px);
-        }
-      }
-      .card-img {
-        width: auto;
-        max-width: 19.375rem;
-        height: auto;
-        max-height: 7.875rem;
-      }
-      .card-txt {
-        margin: 0 0 0 rem(36px);
-        font-size: rem(20px);
-        line-height: rem(30px);
-        color: #292929;
-      }
-    }
-    &.ci-banner {
-      flex-wrap: wrap;
-      justify-content: space-between;
-      .card-item {
-        flex: unset;
-        // width: 20%;
-        margin: 4.5rem 0 0 0;
-        border-radius: 0;
-        background-color: transparent;
-        box-shadow: none;
-      }
-      .card-content {
-        align-items: center;
-        height: 3rem;
-        padding: 0;
-      }
-      .card-img {
-        width: inherit;
-        height: inherit;
-      }
-    }
-    &.count {
-      flex-wrap: wrap;
-      align-items: stretch;
-      justify-content: space-between;
-      counter-reset: number 0;
-      .card-item {
-        &:before {
-          position: absolute;
-          top: -1.75rem;
-          left: 50%;
-          transform: translateX(-50%);
-          width: 3.5rem;
-          height: 3.5rem;
-          border-radius: 9999px;
-          line-height: 3.5rem;
-          text-align: center;
-          color: #ffffff;
-          background-color: #1632d2;
-          counter-increment: number 1;
-          content: "0" counter(number);
-        }
-      }
-      .card-title {
-        margin-bottom: 0.6875rem;
-        font-family: "S-Core";
-        font-size: 1.25rem;
-        font-weight: 600;
-        line-height: 1.5rem;
-        text-align: center;
-      }
-      .card-txt {
-        font-family: "S-Core";
-        font-size: 0.75rem;
-        font-weight: 400;
-        line-height: 1.25rem;
-        text-align: center;
-        color: #353535;
-      }
-    }
-    &.bay-tree {
-      flex-flow: row nowrap;
-      align-items: stretch;
-      overflow-x: auto;
-      // padding: 4.9375rem 1.5rem 9.0625rem 1.5rem;
-      padding: 1.5rem;
-      margin: 0 -1.5rem;
-      .card-item {
-        min-width: 15rem;
-        display: flex;
-        margin-left: 1rem;
-        box-shadow: 0 2px 7px 2px rgba(211, 211, 211, 0.5);
-        &:first-child {
-          margin-left: 0;
-        }
-        &:before,
-        &:after {
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-          width: rem(64px);
-          height: rem(74px);
-          background-size: 100%;
-          background-repeat: no-repeat;
-          content: "";
-        }
-        &:before {
-          left: rem(12px);
-          background-image: url(../../images/renewal/img-licence-open@3x.png);
-        }
-        &:after {
-          right: rem(12px);
-          background-image: url(../../images/renewal/img-licence-close@3x.png);
-        }
-      }
-      .card-content {
-        flex: 1;
-        align-items: center;
-        padding: 1.875rem 4rem 1.25rem 4rem;
-      }
-      .card-title {
-        display: inline-flex;
-        align-items: center;
-        min-height: 4.25rem;
-        margin-bottom: 0.25rem;
-        font-family: "NanumSquare";
-        font-size: 1.5rem;
-        text-align: center;
-        line-height: 2rem;
-        color: #00051f;
-      }
-      .card-txt {
-        margin-top: auto;
-        font-size: 0.875rem;
-        text-align: center;
-        line-height: 2.125rem;
-        letter-spacing: -0.88px;
-      }
-    }
-  }
-  &-item {
-    flex: 1;
-    position: relative;
-    margin-left: 1.25rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 0.25rem 1.875rem 0 rgba(0, 0, 0, 0.11);
-    background-color: #fff;
-    &:first-child {
-      margin-left: 0;
-    }
-  }
-  &-content {
-    display: flex;
-    flex-flow: column wrap;
-    padding: 3rem 1.5rem 1rem 1.5rem;
-  }
-  &-img {
-    width: 6.5rem;
-    height: 6.5rem;
-  }
-  &-ico {
-    width: 100%;
-    height: 100%;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    font-size: 0;
-    &.samsung-pay {
-      background-size: rem(100px);
-      background-image: url(../images/renewal/logo-samsung-pay@3x.png);
-    }
-    &.truefriend {
-      background-size: rem(208px);
-      background-image: url(../images/renewal/logo-truefriend@3x.png);
-    }
-    &.ki {
-      background-size: rem(120px);
-      background-image: url(../images/renewal/logo-ki@3x.png);
-    }
-    &.mirae {
-      background-size: rem(192px);
-      background-image: url(../images/renewal/logo-mirae@3x.png);
-    }
-    &.kt {
-      background-size: rem(48px);
-      background-image: url(../images/renewal/logo-kt@3x.png);
-    }
-    &.wu {
-      background-size: rem(208px);
-      background-image: url(../images/renewal/logo-wu@3x.png);
-    }
-    &.uway {
-      background-size: rem(96px);
-      background-image: url(../images/renewal/logo-uway@3x.png);
-    }
-    &.eximbank {
-      background-size: rem(192px);
-      background-image: url(../images/renewal/logo-eximbank@3x.png);
-    }
-    &.iremit {
-      background-size: rem(132px);
-      background-image: url(../images/renewal/logo-iremit@3x.png);
-    }
-    &.nsb {
-      background-size: rem(146px);
-      background-image: url(../images/renewal/logo-nsb@3x.png);
-    }
-    &.koima {
-      background-size: rem(176px);
-      background-image: url(../images/renewal/logo-koima.png);
-    }
-  }
-  &-title {
-    font-size: 1.25rem;
-    color: #1632d2;
-    &-wrap {
-      display: flex;
-      flex-flow: column wrap;
-    }
-  }
-  &-txt {
-    font-size: 1rem;
-    color: #353535;
-  }
-}
+// .card {
+//   &-wrap {
+//     display: flex;
+//     align-items: center;
+//     &.column {
+//       flex-flow: column wrap;
+//       align-items: stretch;
+//       .card-item {
+//         margin: 1.5rem 0 0 0;
+//         &:first-child {
+//           margin: 0;
+//         }
+//       }
+//       .card-content {
+//         flex-flow: row wrap;
+//         align-items: flex-end;
+//       }
+//       .card-title {
+//         margin-bottom: 0;
+//         font-family: "NanumSquare";
+//         font-size: 1.625rem;
+//         line-height: 2.5rem;
+//         color: #292929;
+//       }
+//       .card-txt {
+//         margin: 1.875rem 0 0 0;
+//         font-family: "NanumSquare";
+//         font-size: 1.125rem;
+//         line-height: 1.875rem;
+//         color: #ababab;
+//       }
+//     }
+//     &.business-card {
+//       .card-item {
+//         border-radius: 0;
+//         box-shadow: none;
+//       }
+//       .card-content {
+//         flex-flow: row nowrap;
+//         align-items: center;
+//         height: 9.3125rem;
+//         padding: 0.7375rem 2.425rem 0.7375rem 2.425rem;
+//       }
+//       .card-ico {
+//         background-position: 0 50%;
+//         background-size: contain;
+//         &.truefriend {
+//           width: rem(310px);
+//         }
+//         &.koima {
+//           width: rem(176px);
+//         }
+//       }
+//       .card-img {
+//         width: auto;
+//         max-width: 19.375rem;
+//         height: auto;
+//         max-height: 7.875rem;
+//       }
+//       .card-txt {
+//         margin: 0 0 0 rem(36px);
+//         font-size: rem(20px);
+//         line-height: rem(30px);
+//         color: #292929;
+//       }
+//     }
+//     &.ci-banner {
+//       flex-wrap: wrap;
+//       justify-content: space-between;
+//       .card-item {
+//         flex: unset;
+//         // width: 20%;
+//         margin: 4.5rem 0 0 0;
+//         border-radius: 0;
+//         background-color: transparent;
+//         box-shadow: none;
+//       }
+//       .card-content {
+//         align-items: center;
+//         height: 3rem;
+//         padding: 0;
+//       }
+//       .card-img {
+//         width: inherit;
+//         height: inherit;
+//       }
+//     }
+//     &.count {
+//       flex-wrap: wrap;
+//       align-items: stretch;
+//       justify-content: space-between;
+//       counter-reset: number 0;
+//       .card-item {
+//         &:before {
+//           position: absolute;
+//           top: -1.75rem;
+//           left: 50%;
+//           transform: translateX(-50%);
+//           width: 3.5rem;
+//           height: 3.5rem;
+//           border-radius: 9999px;
+//           line-height: 3.5rem;
+//           text-align: center;
+//           color: #ffffff;
+//           background-color: #1632d2;
+//           counter-increment: number 1;
+//           content: "0" counter(number);
+//         }
+//       }
+//       .card-title {
+//         margin-bottom: 0.6875rem;
+//         font-family: "S-Core";
+//         font-size: 1.25rem;
+//         font-weight: 600;
+//         line-height: 1.5rem;
+//         text-align: center;
+//       }
+//       .card-txt {
+//         font-family: "S-Core";
+//         font-size: 0.75rem;
+//         font-weight: 400;
+//         line-height: 1.25rem;
+//         text-align: center;
+//         color: #353535;
+//       }
+//     }
+//     &.bay-tree {
+//       flex-flow: row nowrap;
+//       align-items: stretch;
+//       overflow-x: auto;
+//       // padding: 4.9375rem 1.5rem 9.0625rem 1.5rem;
+//       padding: 1.5rem;
+//       margin: 0 -1.5rem;
+//       .card-item {
+//         min-width: 15rem;
+//         display: flex;
+//         margin-left: 1rem;
+//         box-shadow: 0 2px 7px 2px rgba(211, 211, 211, 0.5);
+//         &:first-child {
+//           margin-left: 0;
+//         }
+//         &:before,
+//         &:after {
+//           position: absolute;
+//           top: 50%;
+//           transform: translateY(-50%);
+//           width: rem(64px);
+//           height: rem(74px);
+//           background-size: 100%;
+//           background-repeat: no-repeat;
+//           content: "";
+//         }
+//         &:before {
+//           left: rem(12px);
+//           background-image: url(../../images/renewal/img-licence-open@3x.png);
+//         }
+//         &:after {
+//           right: rem(12px);
+//           background-image: url(../../images/renewal/img-licence-close@3x.png);
+//         }
+//       }
+//       .card-content {
+//         flex: 1;
+//         align-items: center;
+//         padding: 1.875rem 4rem 1.25rem 4rem;
+//       }
+//       .card-title {
+//         display: inline-flex;
+//         align-items: center;
+//         min-height: 4.25rem;
+//         margin-bottom: 0.25rem;
+//         font-family: "NanumSquare";
+//         font-size: 1.5rem;
+//         text-align: center;
+//         line-height: 2rem;
+//         color: #00051f;
+//       }
+//       .card-txt {
+//         margin-top: auto;
+//         font-size: 0.875rem;
+//         text-align: center;
+//         line-height: 2.125rem;
+//         letter-spacing: -0.88px;
+//       }
+//     }
+//   }
+//   &-item {
+//     flex: 1;
+//     position: relative;
+//     margin-left: 1.25rem;
+//     border-radius: 0.5rem;
+//     box-shadow: 0 0.25rem 1.875rem 0 rgba(0, 0, 0, 0.11);
+//     background-color: #fff;
+//     &:first-child {
+//       margin-left: 0;
+//     }
+//   }
+//   &-content {
+//     display: flex;
+//     flex-flow: column wrap;
+//     padding: 3rem 1.5rem 1rem 1.5rem;
+//   }
+//   &-img {
+//     width: 6.5rem;
+//     height: 6.5rem;
+//   }
+//   &-ico {
+//     width: 100%;
+//     height: 100%;
+//     background-position: 50% 50%;
+//     background-repeat: no-repeat;
+//     font-size: 0;
+//     &.samsung-pay {
+//       background-size: rem(100px);
+//       background-image: url(../images/renewal/logo-samsung-pay@3x.png);
+//     }
+//     &.truefriend {
+//       background-size: rem(208px);
+//       background-image: url(../images/renewal/logo-truefriend@3x.png);
+//     }
+//     &.ki {
+//       background-size: rem(120px);
+//       background-image: url(../images/renewal/logo-ki@3x.png);
+//     }
+//     &.mirae {
+//       background-size: rem(192px);
+//       background-image: url(../images/renewal/logo-mirae@3x.png);
+//     }
+//     &.kt {
+//       background-size: rem(48px);
+//       background-image: url(../images/renewal/logo-kt@3x.png);
+//     }
+//     &.wu {
+//       background-size: rem(208px);
+//       background-image: url(../images/renewal/logo-wu@3x.png);
+//     }
+//     &.uway {
+//       background-size: rem(96px);
+//       background-image: url(../images/renewal/logo-uway@3x.png);
+//     }
+//     &.eximbank {
+//       background-size: rem(192px);
+//       background-image: url(../images/renewal/logo-eximbank@3x.png);
+//     }
+//     &.iremit {
+//       background-size: rem(132px);
+//       background-image: url(../images/renewal/logo-iremit@3x.png);
+//     }
+//     &.nsb {
+//       background-size: rem(146px);
+//       background-image: url(../images/renewal/logo-nsb@3x.png);
+//     }
+//     &.koima {
+//       background-size: rem(176px);
+//       background-image: url(../images/renewal/logo-koima.png);
+//     }
+//   }
+//   &-title {
+//     font-size: 1.25rem;
+//     color: #1632d2;
+//     &-wrap {
+//       display: flex;
+//       flex-flow: column wrap;
+//     }
+//   }
+//   &-txt {
+//     font-size: 1rem;
+//     color: #353535;
+//   }
+// }
 
 .box {
   &--gradient {
