--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -264,3 +264,73 @@
     }
   }
 }
+
+
+#fp-nav {
+  position: fixed;
+  top: 50%;
+  z-index: 99;
+  margin-top: unset;
+  transform: translate3d(0, 0, 0);
+  ul {
+    li {
+      width: 100%;
+      height: 100%;
+      margin: 0 0 rem(20px) 0;
+      a {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        span {
+          position: relative;
+          top: unset;
+          left: unset;
+          width: 100%;
+          height: 100%;
+          font-size: rem(20px);
+          font-weight: 700;
+          color: #000000;
+          border-radius: 0;
+          background: transparent;
+          opacity: .41;
+          // transition: all 0.1s ease-in-out;
+        }
+        &.active {
+          margin: 0 0 rem(40px) 0;
+          span {
+            width: 100%;
+            height: 100%;
+            border-radius: 0;
+            font-size: rem(24px);
+            text-decoration: underline;
+            opacity: 1;
+          }
+        }
+      }
+      &:hover {
+        a {
+          span {}
+          &.active {
+            span {}
+          }
+        }
+      }
+    }
+  }
+  &.left {
+    left: rem(100px);
+  }
+  &.white {
+    a {
+      span {
+        color: #ffffff;
+        opacity: .41;
+      }
+      &.active {
+        span {
+          opacity: 1;
+        }
+      }
+    }
+  }
+}
