--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -2,88 +2,49 @@
 
 .navbar {
   // position: fixed; top:0; left:0; padding:0; width:100%; height: auto;  text-align: center; z-index: 100;
-  // background: rgba(#000000, 0.05);
+  // background: rgba(#000000, 0.05); 
   // *{transition: all 0.2s ease-out;}
   // .navbar-toggler{margin:0; padding:0; width:rem(40px); height: rem(40px); border:0; border-radius: 0;}
-  .navbar-toggler:hover,
-  .navbar-toggler:focus {
-    outline: 0;
-  }
-  .navbar-toggler.collapsed {
-    & + #navbar-allmenu {
-      &.collapsing {
-        top: -100%;
-        opacity: 0;
-      }
+  .navbar-toggler:hover, .navbar-toggler:focus{outline: 0;}
+  .navbar-toggler.collapsed{
+    & + #navbar-allmenu{
+      &.collapsing {top: -100%; opacity: 0;}
     }
   }
   // .navbar-toggler-icon{
   //   width:100%; height: 100%; background: url(../images/ic-24-popup-40x40-fff-3x.png) no-repeat center center; background-size: 40px 40px;
   // }
   // .navbar-header{padding: rem(45px) 0 rem(25px) 0; width:100%;}
-  .navbar-brand {
-    padding: 0;
-    margin: 0;
-  }
-  .navbar-brand + .navbar-nav {
-    position: relative;
-    margin: 0 rem(10px) 0 rem(24px);
-    & > ul {
-      display: flex;
-    }
-    & > ul > .nav-item {
-      display: flex;
-      flex-grow: 1;
-      align-items: center;
-      justify-content: center;
-      .nav-link {
-        padding: rem(7px) rem(24px);
-        color: #fff;
-        font-weight: bold;
-        white-space: nowrap;
-      }
-      &.active {
-        .nav-link {
-          color: #fff;
-        }
+  .navbar-brand {padding:0; margin:0;}
+  .navbar-brand + .navbar-nav{
+    position: relative;  margin:0 rem(10px) 0 rem(24px);
+    &>ul{display: flex;}
+    &>ul>.nav-item{
+      display: flex; flex-grow: 1; align-items: center; justify-content: center;
+      .nav-link{padding:rem(7px) rem(24px); color:#fff; font-weight: bold; white-space: nowrap;}
+      &.active{
+        .nav-link{color:#fff;}
       }
     }
-    .nav {
-      position: relative;
-      margin-left: 1.5rem;
-      & > .nav-item {
-        display: flex;
-        flex-grow: 1;
-        align-items: center;
-        justify-content: center;
-        .nav-link {
-          padding: rem(8px) rem(10px);
-          font-family: "Helvetica Neue";
-          font-size: rem(14px);
-          color: #9e9e9e;
-          font-weight: bold;
-          letter-spacing: rem(1px);
-        }
-        &.active {
-          .nav-link {
-            color: #fff;
-          }
+    .nav{
+      position: relative; margin-left:1.5rem;
+      &>.nav-item{
+        display: flex; flex-grow: 1; align-items: center; justify-content: center;
+        .nav-link{padding:rem(8px) rem(10px); font-family: "Helvetica Neue"; font-size: rem(14px); color:#9e9e9e; font-weight: bold; letter-spacing: rem(1px);}
+        &.active{
+          .nav-link{color:#fff;}
         }
       }
     }
   }
-
-  &.on {
+  
+  &.on{
     // background: $primary;
     // .navbar-header{padding-top:rem(30px);}
     // .logo-img{background: url(../images/renewal/logo-hanbiz@3x.png) no-repeat top center; background-size: 100% auto;}
-    .navbar-brand + .navbar-nav ul > .nav-item .nav-link,
-    .navbar-brand + .navbar-nav .nav > .nav-item.active .nav-link {
-      color: #3b3b3b;
-    }
-    .navbar-brand + .navbar-nav .nav > .nav-item .nav-link {
-      color: #9e9e9e;
-    }
+    .navbar-brand + .navbar-nav ul>.nav-item .nav-link,
+    .navbar-brand + .navbar-nav .nav>.nav-item.active .nav-link{color:#3b3b3b;}
+    .navbar-brand + .navbar-nav .nav>.nav-item .nav-link{color:#9e9e9e;}
     // .navbar-toggler-icon{
     //   width: rem(28px);
     //   height: rem(28px);
@@ -93,212 +54,95 @@
     //   background-repeat: no-repeat;
     // }
   }
-  &.von {
+  &.von{
     background: transparent;
-    .logo-img {
-      background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top
-        center;
-      background-size: 100% auto;
-    }
-    .navbar-brand + .navbar-nav ul > .nav-item .nav-link,
-    .navbar-brand + .navbar-nav .nav > .nav-item.active .nav-link {
-      color: #3b3b3b;
-    }
-    .navbar-brand + .navbar-nav .nav > .nav-item .nav-link {
-      color: #9e9e9e;
-    }
-    .navbar-toggler-icon {
-      background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center
-        center;
-      background-size: 40px 40px;
-    }
+    .logo-img{background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top center; background-size: 100% auto;}
+    .navbar-brand + .navbar-nav ul>.nav-item .nav-link,
+    .navbar-brand + .navbar-nav .nav>.nav-item.active .nav-link{color:#3b3b3b;}
+    .navbar-brand + .navbar-nav .nav>.nav-item .nav-link{color:#9e9e9e;}
+    .navbar-toggler-icon{background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center center; background-size: 40px 40px;}
   }
-  &.sub {
-    position: relative;
-    background: $white;
-    .navbar-header {
-      padding-top: rem(30px);
-    }
-    .logo-img {
-      background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top
-        center;
-      background-size: 100% auto;
-    }
-    .navbar-brand + .navbar-nav ul > .nav-item .nav-link,
-    .navbar-brand + .navbar-nav .nav > .nav-item.active .nav-link {
-      color: #3b3b3b;
-    }
-    .navbar-brand + .navbar-nav .nav > .nav-item .nav-link {
-      color: #9e9e9e;
-    }
-    .navbar-toggler-icon {
-      background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center
-        center;
-      background-size: 40px 40px;
-    }
+  &.sub{
+    position: relative; background: $white;
+    .navbar-header{padding-top:rem(30px);}
+    .logo-img{background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top center; background-size: 100% auto;}
+    .navbar-brand + .navbar-nav ul>.nav-item .nav-link,
+    .navbar-brand + .navbar-nav .nav>.nav-item.active .nav-link{color:#3b3b3b;}
+    .navbar-brand + .navbar-nav .nav>.nav-item .nav-link{color:#9e9e9e;}
+    .navbar-toggler-icon{background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center center; background-size: 40px 40px;}
   }
 }
 
-#navbar-allmenu {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  padding: 0;
-  height: auto;
+#navbar-allmenu{
+  position: fixed; left: 0; top:0; width:100%; padding:0; height: auto; 
   transition: all 1s ease !important;
-  &.collapse:not(.show) {
-    top: -100%;
-    opacity: 0;
-  }
-  &.collapse.show {
-    top: 0;
-    opacity: 1;
-  }
+  &.collapse:not(.show){ top: -100%;  opacity: 0;}
+  &.collapse.show{top: 0;  opacity: 1;}
   &.collapsing {
     top: 0;
     opacity: 1;
     transition: all 1s ease !important;
   }
-  .navbar-list {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    background: #262626;
-  }
-  .navbar-collapse {
+  .navbar-list{position: absolute; left:0;top:0; width:100%; background:#262626;}
+  .navbar-collapse{
     height: rem(530px);
-    .navbar-collapse-header {
-      position: relative;
-      width: 100%;
-      padding: rem(40px) 0 rem(54px);
+    .navbar-collapse-header{
+      position: relative; width:100%; padding:rem(40px) 0 rem(54px);
     }
-    .logo-img {
-      height: 28px;
-      background: url(../images/allmenu-logo-180x28-fff-3x.png) no-repeat top
-        center;
-      background-size: 100% auto;
-    }
-    .nav {
-      margin-right: rem(28.5px);
-      & > .nav-item {
-        color: #ffffff;
-        .nav-link {
-          padding: 0 rem(11.5px);
-          color: #9e9e9e;
-        }
-        &.active {
-          .nav-link {
-            color: #ffffff;
-          }
-        }
+    .logo-img{height: 28px; background: url(../images/allmenu-logo-180x28-fff-3x.png) no-repeat top center; background-size: 100% auto;}
+    .nav{
+      margin-right:rem(28.5px);
+      &>.nav-item{
+        color:#ffffff;
+        .nav-link{padding:0 rem(11.5px); color:#9e9e9e;}
+        &.active{
+          .nav-link{color:#ffffff;}
+        }  
       }
     }
-    .navbar-toggler-icon {
-      background: url(../images/ic-20-appbar-40x40-fff-3x.png) no-repeat center
-        center;
-      background-size: 40px 40px;
+    .navbar-toggler-icon{
+      background: url(../images/ic-20-appbar-40x40-fff-3x.png) no-repeat center center; background-size: 40px 40px;
     }
-    .navbar-nav {
-      position: relative;
-      width: 100%;
-      padding-bottom: rem(38px);
-      color: #fff;
-      .nav-link {
-        color: #fff;
-      }
-      dl {
-        width: rem(160px);
-        font-family: "Noto Sans KR";
-        text-align: left;
-        font-weight: bold;
-        & + dl {
-          margin-left: rem(70px);
-        }
-        dt {
-          margin-bottom: rem(17px);
-          font-size: rem(14px);
-          line-height: rem(20px);
-          color: #989898;
-        }
-        dd {
-          width: 100%;
-          margin-bottom: rem(20px);
-          text-align: left;
-          .nav-link {
-            display: inline-block;
-            padding: 0 0 rem(5px) 0;
-            font-size: rem(18px);
-            line-height: rem(27px);
+    .navbar-nav{
+      position: relative; width:100%; padding-bottom:rem(38px); color:#fff; 
+      .nav-link{color:#fff;}
+      dl{
+        width:rem(160px); font-family: "Noto Sans KR"; text-align: left; font-weight: bold;
+        & + dl{margin-left:rem(70px);}
+        dt{margin-bottom:rem(17px); font-size: rem(14px); line-height: rem(20px);  color: #989898;}
+        dd{
+          width:100%; margin-bottom:rem(20px);  text-align: left; 
+          .nav-link{
+            display: inline-block; padding:0 0 rem(5px) 0;font-size: rem(18px); line-height: rem(27px);
             border-bottom: 2px solid transparent;
           }
-          &:hover,
-          &.active {
-            .nav-link {
+          &:hover, &.active{
+            .nav-link{
               border-bottom: 2px solid #fff;
             }
           }
         }
       }
     }
-
-    .sns-box {
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      padding: rem(22px) 0 rem(34px);
-      width: 100%;
-      height: rem(176px);
-      opacity: 0;
-      overflow: hidden;
-      background: #4a4a4a;
-      &.on {
-        bottom: rem(-175px);
-        opacity: 1;
-        transition: all 1s ease;
-      }
-      .nav {
-        font-family: "Noto Sans KR";
-        font-size: rem(18px);
-        line-height: rem(27px);
-        font-weight: bold;
-        text-align: left;
-        .nav-item {
-          padding-right: rem(10px);
+    
+    .sns-box{
+      position: absolute; left:0; bottom:0; padding:rem(22px) 0 rem(34px);
+      width:100%; height:rem(176px); opacity: 0;  overflow: hidden; background:#4a4a4a;
+      &.on{ bottom:rem(-175px); opacity: 1; transition: all 1s ease;}
+      .nav{
+        font-family: "Noto Sans KR"; font-size: rem(18px); line-height: rem(27px); font-weight: bold; text-align: left;
+        .nav-item{padding-right: rem(10px);}
+        .nav-item + .nav-item{margin-left:rem(50px);}
+        .nav-link{padding:0; font-size: rem(14px); font-weight: normal; color:rgba(#ffffff, 0.5);}
+        .country{
+          font-family: "Noto Sans KR"; font-size: rem(14px); font-weight: bold; color:#fff;
+          padding-left:rem(24px); background-size: rem(18px) auto;
         }
-        .nav-item + .nav-item {
-          margin-left: rem(50px);
-        }
-        .nav-link {
-          padding: 0;
-          font-size: rem(14px);
-          font-weight: normal;
-          color: rgba(#ffffff, 0.5);
-        }
-        .country {
-          font-family: "Noto Sans KR";
-          font-size: rem(14px);
-          font-weight: bold;
-          color: #fff;
-          padding-left: rem(24px);
-          background-size: rem(18px) auto;
-        }
-        &.sns-kind {
-          margin-right: 0;
-          margin-bottom: rem(20px);
-          .nav-item {
-            padding-bottom: 4px;
-            padding-right: 0;
-            border-bottom: 4px solid transparent;
-            cursor: pointer;
-          }
-          .nav-item.active {
-            border-bottom: 2px solid #fff;
-          }
-          .nav-item + .nav-item {
-            margin-left: rem(40px);
-          }
+        &.sns-kind{
+          margin-right:0; margin-bottom: rem(20px);
+          .nav-item{padding-bottom:4px; padding-right: 0; border-bottom:4px solid transparent; cursor: pointer;}
+          .nav-item.active{border-bottom:2px solid #fff;}
+          .nav-item + .nav-item{margin-left:rem(40px);}
         }
       }
     }
@@ -311,109 +155,52 @@
   }
 }
 @include media-breakpoint-down(lg) {
-  .navbar .navbar-brand + .navbar-nav {
-    display: none;
-  }
-  #navbar-allmenu {
-    height: calc(100vh - 154px);
-  }
+  .navbar .navbar-brand + .navbar-nav{display: none;}
+  #navbar-allmenu{height: calc(100vh - 154px);}
   #navbar-allmenu .navbar-list,
-  #navbar-allmenu .navbar-list > .container-fluid {
-    height: 100%;
+  #navbar-allmenu .navbar-list>.container-fluid{height: 100%;}
+  #navbar-allmenu .navbar-collapse .navbar-toggler-icon{background-size: 30px 30px;}
+  #navbar-allmenu .navbar-collapse{height: 100%;}
+  #navbar-allmenu .navbar-collapse .navbar-collapse-header{padding:rem(25px) 0 rem(35px) 0;}
+  #navbar-allmenu .navbar-collapse .navbar-nav{
+    height: calc(100vh - 154px - 93px); padding-bottom:rem(20px); letter-spacing: rem(-1.5px); overflow-y: auto;
   }
-  #navbar-allmenu .navbar-collapse .navbar-toggler-icon {
-    background-size: 30px 30px;
-  }
-  #navbar-allmenu .navbar-collapse {
-    height: 100%;
-  }
-  #navbar-allmenu .navbar-collapse .navbar-collapse-header {
-    padding: rem(25px) 0 rem(35px) 0;
-  }
-  #navbar-allmenu .navbar-collapse .navbar-nav {
-    height: calc(100vh - 154px - 93px);
-    padding-bottom: rem(20px);
-    letter-spacing: rem(-1.5px);
-    overflow-y: auto;
-  }
-  #navbar-allmenu .navbar-collapse .navbar-nav dl {
-    width: 33.33333%;
-  }
-  #navbar-allmenu .navbar-collapse .navbar-nav dl + dl {
-    margin-left: 0;
-  }
-  #navbar-allmenu .navbar-collapse .navbar-nav dl dd .nav-link {
-    font-size: rem(16px);
-    line-height: 1.4;
-  }
-  .navbar .navbar-header {
-    padding: rem(15px) 0;
-  }
+  #navbar-allmenu .navbar-collapse .navbar-nav dl{width:33.33333%;}
+  #navbar-allmenu .navbar-collapse .navbar-nav dl + dl{margin-left:0;}
+  #navbar-allmenu .navbar-collapse .navbar-nav dl dd .nav-link{font-size: rem(16px); line-height: 1.4;}
+  .navbar .navbar-header{padding:rem(15px)  0;}
+  
 }
 
 @include media-breakpoint-down(sm) {
-  .navbar {
+  .navbar{  
     background: $white;
     // .navbar-header{padding-top:rem(30px);}
-    .logo-img {
-      background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top
-        center;
-      background-size: 100% auto;
-    }
-    .navbar-brand + .navbar-nav ul > .nav-item .nav-link,
-    .navbar-brand + .navbar-nav .nav > .nav-item.active .nav-link {
-      color: #3b3b3b;
-    }
-    .navbar-brand + .navbar-nav .nav > .nav-item .nav-link {
-      color: #9e9e9e;
-    }
+    .logo-img{background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top center; background-size: 100% auto;}
+    .navbar-brand + .navbar-nav ul>.nav-item .nav-link,
+    .navbar-brand + .navbar-nav .nav>.nav-item.active .nav-link{color:#3b3b3b;}
+    .navbar-brand + .navbar-nav .nav>.nav-item .nav-link{color:#9e9e9e;}
     // .navbar-toggler{width:rem(30px); height: rem(30px);}
     // .navbar-toggler-icon{background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center center; background-size: 30px 30px;}
   }
-  #navbar-allmenu .navbar-collapse .navbar-nav dl dd {
-    margin-bottom: rem(10px);
-  }
-  #navbar-allmenu .navbar-collapse .sns-box {
-    padding: rem(12px) 0 rem(24px);
-    letter-spacing: rem(-1.5px);
-    overflow-y: auto;
-  }
-  #navbar-allmenu .navbar-collapse .sns-box .nav {
-    font-size: rem(16px);
-    line-height: 1.4;
-  }
-  #navbar-allmenu .navbar-collapse .sns-box .nav .nav-item {
-    margin-top: rem(10px);
-    width: 25%;
-  }
-  #navbar-allmenu .navbar-collapse .sns-box .nav .nav-item + .nav-item {
-    margin-left: 0;
-  }
-  #navbar-allmenu .navbar-collapse .sns-box .nav.sns-kind {
-    margin-bottom: rem(10px);
-  }
-  #navbar-allmenu .navbar-collapse .sns-box .nav.sns-kind .nav-item {
-    width: auto;
-  }
+  #navbar-allmenu .navbar-collapse .navbar-nav dl dd{margin-bottom:rem(10px);}
+  #navbar-allmenu .navbar-collapse .sns-box{padding:rem(12px) 0 rem(24px); letter-spacing: rem(-1.5px); overflow-y: auto;}
+  #navbar-allmenu .navbar-collapse .sns-box .nav{font-size: rem(16px); line-height: 1.4;}
+  #navbar-allmenu .navbar-collapse .sns-box .nav .nav-item{margin-top:rem(10px); width:25%;}
+  #navbar-allmenu .navbar-collapse .sns-box .nav .nav-item + .nav-item{margin-left:0;}
+  #navbar-allmenu .navbar-collapse .sns-box .nav.sns-kind{margin-bottom: rem(10px);}
+  #navbar-allmenu .navbar-collapse .sns-box .nav.sns-kind .nav-item{width:auto;}
 }
 
+
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  padding: 0;
-  width: 100%;
-  height: auto;
-  text-align: center;
-  z-index: 100;
-  * {
-    transition: all 0.2s ease-out;
-  }
+  position: fixed; top:0; left:0; padding:0; width:100%; height: auto;  text-align: center; z-index: 100;
+  *{transition: all 0.2s ease-out;}
   .container-fluid {
     max-width: 100%;
     margin: 0 rem(72px);
   }
-  .logo-img {
+  .logo-img{
     width: rem(202px);
     height: rem(30px);
     background-position: 0 50%;
@@ -443,10 +230,10 @@
     }
   }
 
-  &.on {
+  &.on{
     visibility: hidden;
     background: $primary;
-    .logo-img {
+    .logo-img{
       width: rem(121px);
       height: rem(18px);
     }
@@ -472,18 +259,19 @@
       }
     }
 
-    &.on {
+    &.on{
       visibility: visible;
     }
   }
 }
+
 
 #fp-nav {
   position: fixed;
   top: 50%;
   z-index: 99;
   margin-top: unset;
-  transform: translate3d(0, -50%, 0);
+  transform: translate3d(0, 0, 0);
   ul {
     li {
       width: 100%;
@@ -499,13 +287,12 @@
           left: unset;
           width: 100%;
           height: 100%;
-          margin: 0;
           font-size: rem(20px);
           font-weight: 700;
           color: #000000;
           border-radius: 0;
           background: transparent;
-          opacity: 0.41;
+          opacity: .41;
           // transition: all 0.1s ease-in-out;
         }
         &.active {
@@ -513,7 +300,6 @@
           span {
             width: 100%;
             height: 100%;
-            margin: 0;
             border-radius: 0;
             font-size: rem(24px);
             text-decoration: underline;
@@ -523,24 +309,22 @@
       }
       &:hover {
         a {
-          span {
-          }
+          span {}
           &.active {
-            span {
-            }
+            span {}
           }
         }
       }
     }
   }
   &.left {
-    left: rem(110px);
+    left: rem(100px);
   }
   &.white {
     a {
       span {
         color: #ffffff;
-        opacity: 0.41;
+        opacity: .41;
       }
       &.active {
         span {
