메뉴(모바일  ver) 스타일 추가

--- a/scss/_krlee.scss
+++ b/scss/_krlee.scss
@@ -322,6 +322,7 @@
   .sub-visual {
     &.membership {
       height: rem(198px);
+      margin-top: rem(60px);
       .container-fluid {
         h2 {
           height: rem(65px);
