--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -72,71 +72,6 @@
       }
     }
   }
-
-  &.on {
-    // background: $primary;
-    // .navbar-header{padding-top:rem(30px);}
-    // .logo-img{background: url(../images/renewal/logo-hanbiz@3x.png) no-repeat top center; background-size: 100% auto;}
-    .navbar-brand + .navbar-nav ul > .nav-item .nav-link,
-    .navbar-brand + .navbar-nav .nav > .nav-item.active .nav-link {
-      color: #3b3b3b;
-    }
-    .navbar-brand + .navbar-nav .nav > .nav-item .nav-link {
-      color: #9e9e9e;
-    }
-    // .navbar-toggler-icon{
-    //   width: rem(28px);
-    //   height: rem(28px);
-    //   background-position: 50% 50%;
-    //   background-color: 100%;
-    //   background-image: url(../images/renewal/ic-24-popup-x-black@3x.png);
-    //   background-repeat: no-repeat;
-    // }
-  }
-  &.von {
-    background: transparent;
-    .logo-img {
-      background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top
-        center;
-      background-size: 100% auto;
-    }
-    .navbar-brand + .navbar-nav ul > .nav-item .nav-link,
-    .navbar-brand + .navbar-nav .nav > .nav-item.active .nav-link {
-      color: #3b3b3b;
-    }
-    .navbar-brand + .navbar-nav .nav > .nav-item .nav-link {
-      color: #9e9e9e;
-    }
-    .navbar-toggler-icon {
-      background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center
-        center;
-      background-size: 40px 40px;
-    }
-  }
-  &.sub {
-    position: relative;
-    background: $white;
-    .navbar-header {
-      padding-top: rem(30px);
-    }
-    .logo-img {
-      background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top
-        center;
-      background-size: 100% auto;
-    }
-    .navbar-brand + .navbar-nav ul > .nav-item .nav-link,
-    .navbar-brand + .navbar-nav .nav > .nav-item.active .nav-link {
-      color: #3b3b3b;
-    }
-    .navbar-brand + .navbar-nav .nav > .nav-item .nav-link {
-      color: #9e9e9e;
-    }
-    .navbar-toggler-icon {
-      background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center
-        center;
-      background-size: 40px 40px;
-    }
-  }
 }
 
 #navbar-allmenu {
@@ -165,17 +100,17 @@
     left: 0;
     top: 0;
     width: 100%;
-    background: #262626;
+    background-color: $primary;
   }
   .navbar-collapse {
     height: rem(530px);
     .navbar-collapse-header {
       position: relative;
       width: 100%;
-      padding: rem(40px) 0 rem(54px);
+      padding: rem(24px) 0 rem(40px);
     }
     .logo-img {
-      height: 28px;
+      //height: 28px;
       background: url(../images/allmenu-logo-180x28-fff-3x.png) no-repeat top
         center;
       background-size: 100% auto;
@@ -198,107 +133,64 @@
     .navbar-toggler-icon {
       background: url(../images/ic-20-appbar-40x40-fff-3x.png) no-repeat center
         center;
-      background-size: 40px 40px;
+      // background-size: 40px 40px;
+      width: rem(16px); height: rem(16px);
+      background-size: rem(16px) rem(16px);
+    }
+    .navbar-text-wrap {
+      width: 100vw;
+      text-align: left;
+      //margin: 0 rem(-24px); // 디자인은 20
+      padding: 0 rem(24px) rem(20px) rem(24px); // 디자인은 20
+      margin: 0 rem(-24px) rem(40px) rem(-24px);
+      border-bottom: 1px solid rgba(179,179,179,0.2);
+      .navbar-text {
+        padding: 0;
+        font-size: rem(12px);
+        font-weight: normal;
+        line-height: 1.5;
+        color: #fff;
+        .navbar-link {
+          color:#33dd9b;
+          text-decoration: underline;
+        }
+      }
     }
     .navbar-nav {
       position: relative;
       width: 100%;
-      padding-bottom: rem(38px);
       color: #fff;
-      .nav-link {
-        color: #fff;
-      }
-      dl {
-        width: rem(160px);
-        font-family: "Noto Sans KR";
+      ul {
+        font-size: rem(18px);
         text-align: left;
         font-weight: bold;
-        & + dl {
-          margin-left: rem(70px);
-        }
-        dt {
-          margin-bottom: rem(17px);
-          font-size: rem(14px);
-          line-height: rem(20px);
-          color: #989898;
-        }
-        dd {
-          width: 100%;
-          margin-bottom: rem(20px);
-          text-align: left;
-          .nav-link {
-            display: inline-block;
-            padding: 0 0 rem(5px) 0;
-            font-size: rem(18px);
-            line-height: rem(27px);
-            border-bottom: 2px solid transparent;
+        .nav-item {
+          letter-spacing: 2px;
+          & + .nav-item {
+            margin-top: rem(12px);
           }
-          &:hover,
-          &.active {
-            .nav-link {
-              border-bottom: 2px solid #fff;
-            }
+          .nav-link {
+            color: #fff;
           }
         }
       }
     }
-
-    .sns-box {
+    .navbar-bottom-link-wrap {
       position: absolute;
-      left: 0;
-      bottom: 0;
-      padding: rem(22px) 0 rem(34px);
-      width: 100%;
-      height: rem(176px);
-      opacity: 0;
-      overflow: hidden;
-      background: #4a4a4a;
-      &.on {
-        bottom: rem(-175px);
-        opacity: 1;
-        transition: all 1s ease;
-      }
-      .nav {
-        font-family: "Noto Sans KR";
+      left: 0; bottom: 0;
+      width: 100vw;
+      .nav-bottom-link {
+        flex:1;
+        height: rem(64px);
+        padding: 0;
+        color: #fff;
+        background-color: #0921a2;
+        line-height: rem(64px);
         font-size: rem(18px);
-        line-height: rem(27px);
         font-weight: bold;
-        text-align: left;
-        .nav-item {
-          padding-right: rem(10px);
-        }
-        .nav-item + .nav-item {
-          margin-left: rem(50px);
-        }
-        .nav-link {
-          padding: 0;
-          font-size: rem(14px);
-          font-weight: normal;
-          color: rgba(#ffffff, 0.5);
-        }
-        .country {
-          font-family: "Noto Sans KR";
-          font-size: rem(14px);
-          font-weight: bold;
-          color: #fff;
-          padding-left: rem(24px);
-          background-size: rem(18px) auto;
-        }
-        &.sns-kind {
-          margin-right: 0;
-          margin-bottom: rem(20px);
-          .nav-item {
-            padding-bottom: 4px;
-            padding-right: 0;
-            border-bottom: 4px solid transparent;
-            cursor: pointer;
-          }
-          .nav-item.active {
-            border-bottom: 2px solid #fff;
-          }
-          .nav-item + .nav-item {
-            margin-left: rem(40px);
-          }
+        border-top: 1px solid rgba(179,179,179,0.2);
+        & + .nav-bottom-link {
+          border-left: 1px solid rgba(179,179,179,0.2);
         }
       }
     }
@@ -314,26 +206,22 @@
   .navbar .navbar-brand + .navbar-nav {
     display: none;
   }
+  // 수정
   #navbar-allmenu {
-    height: calc(100vh - 154px);
+    // height: calc(100vh - 154px);
+    height: calc(100vh - 120px);
   }
   #navbar-allmenu .navbar-list,
   #navbar-allmenu .navbar-list > .container-fluid {
     height: 100%;
   }
-  #navbar-allmenu .navbar-collapse .navbar-toggler-icon {
-    background-size: 30px 30px;
-  }
   #navbar-allmenu .navbar-collapse {
     height: 100%;
   }
-  #navbar-allmenu .navbar-collapse .navbar-collapse-header {
-    padding: rem(25px) 0 rem(35px) 0;
-  }
   #navbar-allmenu .navbar-collapse .navbar-nav {
-    height: calc(100vh - 154px - 93px);
-    padding-bottom: rem(20px);
-    letter-spacing: rem(-1.5px);
+    // height: calc(100vh - 154px - 93px);
+    // 전체 - #navbar-allmenu의 높이 - header의 높이, 텍스트 영역의 높이(마진포함)
+    height:calc(100vh - 120px - 90px - 75px - 40px);
     overflow-y: auto;
   }
   #navbar-allmenu .navbar-collapse .navbar-nav dl {
